--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/better-sqlite3": "^7.6.6",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
@@ -22,6 +23,9 @@
 	"dependencies": {
 		"@fontsource-variable/encode-sans": "^5.0.8",
 		"@fontsource-variable/geologica": "^5.0.3",
-		"@fontsource-variable/piazzolla": "^5.0.18"
+		"@fontsource-variable/piazzolla": "^5.0.18",
+		"argon2": "^0.31.1",
+		"better-sqlite3": "^9.0.0",
+		"nanoid": "^5.0.2"
 	}
 }
