--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@fontsource-variable/commissioner": "^5.0.17",
+		"@iconify-json/ph": "^1.1.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/better-sqlite3": "^7.6.6",
+		"argon2": "^0.31.1",
+		"better-sqlite3": "^9.0.0",
+		"nanoid": "^5.0.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fontsource-variable/encode-sans": "^5.0.8",
-		"@fontsource-variable/geologica": "^5.0.3",
-		"@fontsource-variable/piazzolla": "^5.0.18",
-		"argon2": "^0.31.1",
-		"better-sqlite3": "^9.0.0",
-		"nanoid": "^5.0.2",
+		"unplugin-icons": "^0.17.3",
+		"vite": "^4.4.2",
 		"zod": "^3.22.4",
 		"zod-validation-error": "^2.1.0"
-	}
+	},
+	"type": "module"
 }
