--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"zod": "^3.22.4",
 		"zod-validation-error": "^2.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1"
+	}
 }
